add filler comments fix layout issue with scroll bars and spacing in user comments

--- a/contactPage/contactUs.html
+++ b/contactPage/contactUs.html
@@ -78,7 +78,9 @@
                   <div id='commentsMade'>
                   <h3 id='CommentTitle'>Playa Comments</h3>
                   <div id ='userDone'>
-
+                  <p class="usercomment">Darnell: Hey Guys. I had a great time at camp</p>
+                  <p class="usercomment">Corey: Best Burning Man EVER!!!!!!!!!!</p>
+                  <p class="usercomment">Anthony: This camp was awesome. Love the drinks.</p>
                   </div>
                   </div>
             </div>
