add filler signatures, close 113

--- a/thanksPage/thanks.html
+++ b/thanksPage/thanks.html
@@ -37,6 +37,9 @@
                 <input id="thanksIn" type="text" name="thanks" placeholder="Sign Name Here"></input>
                 <button id="sigButton" class="sigButton">add me</button>
                 <h2 class="thanksH">Whalephants Campers</h2>
+                <p class="signature">Corey Berning</p>
+                <p class="signature">Darnell Holder</p>
+                <p class="signature">Anthony Casson</p>
                 <div id="thanksDiv"></div>
 
 
