fixed char set issue on about page

--- a/aboutPage/about.html
+++ b/aboutPage/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>)'( Whalephants )'(</title>
   <link rel="stylesheet" type="text/css" href="../structure/homePage.css">
   <link href='https://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
@@ -37,14 +38,14 @@
                     <img class ='sideImg' id='campTent' src="../homePage/homePageImages/campTent.jpg">
                 </div>
                 <div id='drinkTime' class ='InnerSec'>
-                    <p3>Every day a different camp mate is in charge of concocting a drink that will be later served on the corner. You as a reader can partake in this daily event in different ways. Pre-burn you can head over to the <a href="../votePage/vote.html"><u>Voting page</u></a> to help decide what drinks are going to be made for this year’s event. The second way you can help make this great is to come by each day to the corner of <b>9:15 and J</b> to enjoy the efforts of your voting!</p3><br/> 
+                    <p3>Every day a different camp mate is in charge of concocting a drink that will be later served on the corner. You as a reader can partake in this daily event in different ways. Pre-burn you can head over to the <a href="../votePage/vote.html"><u>Voting page</u></a> to help decide what drinks are going to be made for this year’s event. The second way you can help make this great is to come by each day to the corner of <b>9:15 and J</b> to enjoy the efforts of your voting!</p3><br/>
                     <img class ='sideImg' id='drink' src="./aboutImages/drink.jpg">
                 </div>
 
                 <div id ='moopTime' class ='InnerSec'>
                     <p3>We also have a couple core games Whalephant Burners like to play, and we know you will enjoy them too. Think you have photo skills? Take to our annual photo contest. We supply the props (. . .we recommend the homemade ray guns), you supply the action. The crazy-coolest pictures get the victory - and more drinks.
                     <br></br>
-                    The second game doubles as the Burning Man conservation effort. With so many people, there is always bound to be stray matter. Matter Out Of Place (AKA Moop) is a big deal, and being responsible Burners means taking care of the Moop. That is why we have our own <a target="_blank" href='http://burningman.org/event/preparation/leaving-no-trace/'><u>Moop</u></a>scavenger hunt! 
+                    The second game doubles as the Burning Man conservation effort. With so many people, there is always bound to be stray matter. Matter Out Of Place (AKA Moop) is a big deal, and being responsible Burners means taking care of the Moop. That is why we have our own <a target="_blank" href='http://burningman.org/event/preparation/leaving-no-trace/'><u>Moop</u></a>scavenger hunt!
                     <br></br>
                     The goal is simple: Find the Moop and collect it; ever piece is fair game. Every morning we go over what was discovered and who discovered it. You can also go for the category wins, some of which include: Biggest Piece of Moop, Shiniest Piece of Moop, Smallest Piece of Moop, and the Craziest Piece of Moop.<br/>
                     <img src="./aboutImages/moop.jpg" id='moopImg'>
